AER-2735 Added entity reference to IMAER for NCA (#275)